--- a/config_files/baselines_amazon_video_games.yml
+++ b/config_files/baselines_amazon_video_games.yml
@@ -20,8 +20,8 @@ experiment:
         # hyper_opt_alg: grid
         # validation_rate: 5
         verbose: True
-        # save_weights: False
-        save_recs: True
+        save_weights: True
+        save_recs: False
         # validation_metric: HR
       epochs: 10
       batch_size: 128
@@ -30,7 +30,7 @@ experiment:
       l_w: 0.000001
       l_b: 0
       l_gan: 0.0001
-      predict_model: generator # You can chose also 'discriminator'
+      predict_model: discriminator # You can chose also 'discriminator'
       g_epochs: 2 # For each model epoch there are g_epochs generator epochs
       d_epochs: 1 # For each model epoch there are d_epochs generator epochs
       g_pretrain_epochs: 10 # The epochs to pre-train the generator
