--- a/config_files/baselines_amazon_video_games.yml
+++ b/config_files/baselines_amazon_video_games.yml
@@ -1,5 +1,6 @@
 experiment:
   gpu: 0
+  path_output_rec_weight: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/fold-1/
   data_config:
     strategy: fixed
     sep: ","
@@ -20,12 +21,12 @@ experiment:
         # hyper_opt_alg: grid
         # validation_rate: 5
         verbose: True
-        save_weights: False
+        save_weights: True
         save_recs: False
         # validation_metric: HR
-      epochs: 50
+      epochs: 30
       batch_size: 512
-      factors: 30
+      factors: 20
       lr: 0.001
       l_w: 0.0001
       l_b: 0.0001
