--- a/config_files/baselines_amazon_video_games.yml
+++ b/config_files/baselines_amazon_video_games.yml
@@ -1,6 +1,6 @@
 experiment:
   gpu: 0
-  path_output_rec_pred: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/fold-1/
+  path_output_rec_weights: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/fold-1/
   data_config:
     strategy: fixed
     sep: ","
@@ -21,13 +21,12 @@ experiment:
         # hyper_opt_alg: grid
         # validation_rate: 5
         verbose: True
-        save_weights: False
-        save_predictions: True
+        save_weights: True
         save_recs: False
         # validation_metric: HR
-      epochs: 30
+      epochs: 1
       batch_size: 512
-      factors: 20
+      factors: 50
       lr: 0.001
       l_w: 0.0001
       l_b: 0.0001
