--- a/config_files/baselines_amazon_video_games.yml
+++ b/config_files/baselines_amazon_video_games.yml
@@ -1,6 +1,6 @@
 experiment:
   gpu: 0
-  path_output_rec_weights: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/fold-1/
+  path_output_rec_weight: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/fold-1/
   data_config:
     strategy: fixed
     sep: ","
