--- a/config_files/baselines_amazon_video_games.yml
+++ b/config_files/baselines_amazon_video_games.yml
@@ -1,7 +1,7 @@
 experiment:
   gpu: 0
-  path_output_rec_weight: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/fold-{}/
-  path_output_rec_performance: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/fold-{}/
+  path_output_rec_weight: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/
+  path_output_rec_performance: /content/drive/MyDrive/recommender_datasets/model_predictions/IRGAN/Amazon-video-games/
   data_config:
     strategy: fixed
     sep: ","
