--- a/config_files/baselines_amazon_video_games.yml
+++ b/config_files/baselines_amazon_video_games.yml
@@ -15,7 +15,7 @@ experiment:
     cutoffs: [ 5, 20 ]
     simple_metrics: [ Precision, Recall ]
     relevance_threshold: 1
-    paired_ttest: True
+    paired_ttest: False
   models:
     IRGAN:
       meta:
@@ -25,10 +25,10 @@ experiment:
         save_weights: True
         save_recs: False
         # validation_metric: HR
-      epochs: 3
+      epochs: 50
       batch_size: 512
       factors: 50
-      lr: 0.001
+      lr: 0.003
       l_w: 0.0001
       l_b: 0.0001
       l_gan: 0.0001
